[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/blood_splat_2.png" type="Texture" id=1]
[ext_resource path="res://assets/blood_splat_0.png" type="Texture" id=2]
[ext_resource path="res://assets/blood_splat_1.png" type="Texture" id=3]
[ext_resource path="res://objects/cedaver/Pivot.gd" type="Script" id=4]
[ext_resource path="res://assets/pioneeres_death.png" type="Texture" id=5]
[ext_resource path="res://assets/ZombieJawTest.png" type="Texture" id=6]
[ext_resource path="res://objects/interactive/base/InteractiveArea.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/cedaver/EatInteraction.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Cedaver" type="Position2D"]

[node name="Pivot" type="StaticBody2D" parent="."]
position = Vector2( 0, 24 )
script = ExtResource( 4 )

[node name="Blood" type="Node2D" parent="Pivot"]
position = Vector2( -1, -18 )

[node name="blood_splat_0" type="Sprite" parent="Pivot/Blood"]
position = Vector2( 2, 23 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="blood_splat_1" type="Sprite" parent="Pivot/Blood"]
position = Vector2( 28, 28 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="blood_splat_2" type="Sprite" parent="Pivot/Blood"]
position = Vector2( -21, 32 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( -1, -2 )
texture = ExtResource( 5 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot"]
shape = SubResource( 1 )

[node name="EatInteraction" type="Node2D" parent="."]
position = Vector2( 0, 19 )
script = ExtResource( 8 )

[node name="YeerkPalm" type="AnimatedSprite" parent="EatInteraction"]
frames = SubResource( 11 )
frame = 1
playing = true

[node name="InteractiveArea" parent="EatInteraction" instance=ExtResource( 7 )]
[connection signal="interact" from="EatInteraction/InteractiveArea" to="EatInteraction" method="_interact"]
[connection signal="player_entered" from="EatInteraction/InteractiveArea" to="EatInteraction" method="player_entered"]
[connection signal="player_exited" from="EatInteraction/InteractiveArea" to="EatInteraction" method="player_exited"]
